--- a/package.json
+++ b/package.json
@@ -19,17 +19,9 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "prepare": "husky install"
   },
-  "lint-staged": {
-    "*.{js,css,json,md}": [
-      "prettier --write"
-    ],
-    "*.js": [
-      "eslint --fix"
-    ]
-  },
+  
   "dependencies": {
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.12.0",
@@ -63,18 +55,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
-    "@babel/eslint-parser": "^7.13.14",
     "@babel/preset-react": "^7.13.13",
-    "@upstatement/eslint-config": "^1.0.0",
     "@upstatement/prettier-config": "^1.0.0",
     "babel-preset-gatsby": "^1.4.0",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
     "gatsby-remark-code-titles": "^1.1.0",
     "husky": "^6.0.0",
-    "lint-staged": "^10.1.2",
     "prettier": "^2.2.1"
   }
 }
